HDDS-14005. Addressing Copilot feedback